# open-address-book

./: AUTHORS  ChangeLog  Makefile.am  README.md  configure-plugins.sh  configure.ac
doc/: Doxyfile.in  Makefile.am
doc/img/: ClassOverview.dia
doc/pages/: main.txt  modules.txt  pluginInterface.txt  setup.txt
examples/: Makefile.am  test_EDS_download.cpp  test_OpenAB_Sync.cpp  test_OpenAB_Sync_File.cpp  test_OpenAB_Sync_PBAP.cpp  test_OpenAB__VCardID.cpp  test_PBAP_download.cpp  test_carddav_download.cpp  test_file_download.cpp  test_google_download.cpp  test_icalendar_parsing.cpp  test_plugin_constructor.cpp  test_plugin_factories.cpp  test_vcard_parsing.cpp
examples/plugin/: README.txt  test_template_plugin_constructor.cpp
examples/plugin/example/: genericInterface.cpp  genericInterface.hpp  main.cpp  plugin1.cpp  plugin2.cpp
src/: Makefile.am  OpenAB.hpp  OpenAB_Init.cpp  oab.pc.in
src/PIMItem/: PIMItem.hpp  PIMItemIndex.cpp  PIMItemIndex.hpp
src/PIMItem/Calendar/: PIMCalendarItem.cpp  PIMCalendarItem.hpp  PIMCalendarItemIndex.cpp  PIMCalendarItemIndex.hpp
src/PIMItem/Contact/: PIMContactItem.cpp  PIMContactItem.hpp  PIMContactItemIndex.cpp  PIMContactItemIndex.hpp  Pict.cpp  Pict.hpp
src/glib2/: OpenAB_glib2_global.h
src/helpers/: BasicHttpAuthorizer.cpp  BasicHttpAuthorizer.hpp  Http.cpp  Http.hpp  Log.cpp  Log.hpp  OAuth2HttpAuthorizer.cpp  OAuth2HttpAuthorizer.hpp  PluginManager.cpp  PluginManager.hpp  PluginManagerTemplates.hpp  SecureString.cpp  SecureString.hpp  SmartPtr.hpp  StringHelper.cpp  StringHelper.hpp  TimeStamp.cpp  TimeStamp.hpp  Variant.cpp  Variant.hpp
src/plugin/: GenericParameters.cpp  GenericParameters.hpp  Plugin.hpp  oab-plugin.pc.in
src/plugin/source/: Source.cpp  Source.hpp
src/plugin/storage/: CalendarStorage.cpp  CalendarStorage.hpp  ContactsStorage.cpp  ContactsStorage.hpp  Storage.cpp  Storage.hpp  StorageItem.hpp
src/plugin/sync/: Sync.cpp  Sync.hpp
src/plugins/: plugins.am
src/plugins/carddav/: CalDAVHelper.cpp  CalDAVHelper.hpp  CalDAVStorage.cpp  CalDAVStorage.hpp  CardDAVHelper.cpp  CardDAVHelper.hpp  CardDAVStorage.cpp  CardDAVStorage.hpp  DAVHelper.cpp  DAVHelper.hpp  caldav_helper_tester.cpp  carddav.am  carddav_helper_tester.cpp  configure.ac
src/plugins/eds/: EDSCalendarStorage.cpp  EDSCalendarStorage.hpp  EDSCalendarStorageCommon.cpp  EDSCalendarStorageCommon.hpp  EDSCalendarStorageItemIterator.cpp  EDSCalendarStorageItemIterator.hpp  EDSContactsStorage.cpp  EDSContactsStorage.hpp  EDSContactsStorageItemIterator.cpp  EDSContactsStorageItemIterator.hpp  OpenAB_eds_global.h  configure.ac  eds.am
src/plugins/file/: File.cpp  File.hpp  file.am
src/plugins/google/: GDataContactsConverter.cpp  GDataContactsConverter.hpp  GDataOAuth2Authorizer.c  GDataOAuth2Authorizer.h  Google.cpp  Google.hpp  configure.ac  google.am
src/plugins/onewaysync/: OneWaySync.cpp  OneWaySync.hpp  onewaysync.am
src/plugins/pbap/: BluezOBEXTransfer.cpp  BluezOBEXTransfer.hpp  PBAP.cpp  PBAP.hpp  configure.ac  pbap.am
src/plugins/twowaysync/: TwoWaySync.cpp  TwoWaySync.hpp  twowaysync.am
tests/: Makefile.am  obex_mock.py  vcard_incorrect.vcf  vcard_misformatted.vcf  vcard_multiple.vcf  vcard_single.vcf  vcards_sync_initial.vcf  vcards_sync_one_modified.vcf  vcards_sync_one_removed.vcf
tests/OpenAB/: TestLogger.hpp  generic_params_tests.cpp  http_tests.cpp  logger_tests.cpp  oab_tests_main.cpp  pim_contact_item_index_tests.cpp  pim_contact_item_tests.cpp  pluginManager_tests.cpp  secure_string_tests.cpp  smart_ptr_tests.cpp  strings_helper_tests.cpp  sync_tests.cpp  test_plugin.cpp  timestamp_tests.cpp  unimplemented_plugin.cpp  variant_tests.cpp
tests/Plugin/CalDav/: CalDAVHelper_tests.cpp  CalDAVHelper_tests_main.cpp
tests/plugins/Source/File/: oab_source_file_tests.cpp  oab_source_file_tests_main.cpp
tests/plugins/Source/PBAP/: oab_source_pbap_tests.cpp  oab_source_pbap_tests_main.cpp
tests/plugins/Storage/DAV/: CalDAVStorage_tests.cpp  CardDAVStorage_tests.cpp  CardDAVStorage_tests_main.cpp
tests/plugins/Storage/EDS/: oab_storage_eds_tests.cpp  oab_storage_eds_tests_main.cpp
tests/plugins/Sync/OneWay/: oab_sync_oneway_tests.cpp  oab_sync_oneway_tests_main.cpp
tests/vcards/: vcard_0.vcf  vcard_1.vcf
